Abre sessões para banco